package NYT.NTransactionServer.NProto;

////////////////////////////////////////////////////////////////////////////////

message TReqStartTransaction
{ }

message TRspStartTransaction
{
    required bytes TransactionId = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqCommitTransaction
{
    required bytes TransactionId = 1;
}

message TRspCommitTransaction
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqAbortTransaction
{
    required bytes TransactionId = 1;
}

message TRspAbortTransaction
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqRenewTransactionLease
{
    required bytes TransactionId = 1;
}

message TRspRenewTransactionLease
{ }

////////////////////////////////////////////////////////////////////////////////